# ml-kem-notebooks

./: .gitignore  CHANGELOG.md  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml
.github/workflows/: book.yml  redirect.yml
_extra/: robots.txt
_templates/: layout.html
ko/: _config.yml  _toc.yml  intro.md
ko/_static/: lang-switcher.js
ko/notebooks/: 00a_why_pqc.ipynb  00b_classical_crypto_recap.ipynb  00c_math_toolbox.ipynb  01_lattice_intro.ipynb  02_toy_lwe.ipynb  03_attacking_toy_lwe.ipynb  04_polynomial_rings.ipynb  05_ring_lwe.ipynb  06_ml_kem_spec.ipynb  07_ml_kem_tests.ipynb  08_hybrid_kem.ipynb  09_wrap_up.ipynb  10_signatures_and_friends.ipynb  11_deployment_and_faq_glossary.ipynb  (+8 more)
notebooks/: 00a_why_pqc.ipynb  00b_classical_crypto_recap.ipynb  00c_math_toolbox.ipynb  01_lattice_intro.ipynb  02_toy_lwe.ipynb  03_attacking_toy_lwe.ipynb  04_polynomial_rings.ipynb  05_ring_lwe.ipynb  06_ml_kem_spec.ipynb  07_ml_kem_tests.ipynb  08_hybrid_kem.ipynb  09_wrap_up.ipynb  10_signatures_and_friends.ipynb  11_deployment_and_faq_glossary.ipynb  12_quantum_basics.ipynb  13_qft_and_period.ipynb  14_shor_breaks_rsa.ipynb  15_shor_vs_lattice.ipynb  16_lll_basis_reduction.ipynb  17_bkz_and_scaling.ipynb  18_primal_attack_on_lwe.ipynb  19_ml_kem_parameters_and_estimator.ipynb
pqc_edu/: __init__.py  attacks.py  lattice.py  lwe.py  ml_kem.py  ntt.py  params.py  polyring.py  sampling.py
tests/: test_bkz.py  test_lll.py  test_lwe.py  test_ml_kem.py  test_ntt.py  test_polyring.py  test_primal_attack.py  test_qft.py  test_quantum_simulator.py  test_shor.py
(+16 files in other folders)
