[project]
name = "pqc-edu"
version = "0.1.0"
description = "Educational implementation of lattice-based post-quantum cryptography"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pqc_edu*"]
